# multi_curl

./: .env.dev  .gitignore  Cargo.toml  attributes.json  csv_to_json.sh  readme.md
src/: main.rs
src/config/: mod.rs
src/json_parser/: mod.rs
src/service/: mod.rs
