[package]
name = "multi_curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bytes = "1.1.0"
dotenv = "0.15.0"
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum_macros = "0.24.0"
tokio = { version = "1.19.1", features = ["full"] }
